k8s/namespaces/zitadel/base/service-login.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-login
  labels:
    app: zitadel
    component: login
spec:
  type: ClusterIP
  selector:
    app: zitadel
    component: login
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
