k8s/namespaces/zitadel/base/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-web
  labels:
    app: zitadel
    component: web
spec:
  type: ClusterIP
  selector:
    app: zitadel
    component: web
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
